syntax = "proto3";
package orderingpb.v1;

import "orderingpb/v1/messages.proto";

option go_package = "github.com/demo/ordering/orderingpb/v1;orderingv1";

service OrderingService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
  // rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {};
  // rpc ReadyOrder(ReadyOrderRequest) returns (ReadyOrderResponse) {};
  // rpc CompleteOrder(CompleteOrderRequest) returns (CompleteOrderResponse) {};
}

message CreateOrderRequest {
  repeated Item items = 1;
  string customer_id = 2;
  string payment_id = 3;
}

message CreateOrderResponse {
  string id = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message CancelOrderRequest {
  string id = 1;
}

message CancelOrderResponse {}

message ReadyOrderRequest {
  string id = 1;
}

message ReadyOrderResponse {}

message CompleteOrderRequest {
  string id = 1;
  string invoice_id = 2;
}

message CompleteOrderResponse {}
