syntax = "proto3";

package orderingpb;

// Order represents a customer order
message Order {
  string id = 1;
  string customer_id = 2;
  repeated OrderItem items = 3;
  string payment_id = 4;
  string status = 5;
}

// OrderItem represents an item in the order
message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}
